--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -55,8 +55,141 @@ Style Guide assumes using, but is not limited to:
 
 ## Data Immutability
 
-Majority of the data should be immutable (use `Readonly`, `ReadonlyArray`, always return new array, object etc). To keep cognitive load low for future developers try to keep data objects small.  
+Majority of the data should be immutable (use `Readonly`, `ReadonlyArray`, always return new array, object etc). To keep cognitive load for future developers low, try to keep data objects small.  
 As an exception mutations should be used sparingly in cases where truly necessary: complex objects, performance reasoning etc.
+
+## Types
+
+### Type Definition
+
+TypeScript offers two options for type definitions - `type` and `interface`. As they come with some functional differences, we try to limit syntax difference and pick one for consistency.
+
+<p>
+  All types must be defined with `type` alias{' '}
+  <a href="https://typescript-eslint.io/rules/consistent-type-definitions/#type" target="_blank">
+    (eslint rule)
+  </a>
+  .<Chip>Consider using interfaces if developing package that can be further extended, team is more comfortable working with interfaces etc. Disable lint rule in case of exceptions as type unions (type Status = 'loading' | 'error') etc.</Chip>
+</p>
+
+```ts
+// ❌ Avoid interface definitions
+interface UserInfo {
+  name: string;
+}
+
+// ✅ Use type definition
+type UserInfo = {
+name: string;
+};
+
+```
+
+In case of exceptions use `interface` and disable lint rule. E.g. declaration merging, extending third-party library types etc.
+
+```ts
+declare namespace NodeJS {
+// eslint-disable-next-line @typescript-eslint/consistent-type-definitions
+export interface ProcessEnv {
+    NODE_ENV: 'development' | 'production;
+    PORT: string;
+  }
+}
+
+```
+
+### Type & Non-nullability Assertions
+
+Type assertions `user as User` and non-nullability assertions `user!.name` are unsafe. Both only silence TypeScript compiler and increase the risk of crashing application at runtime.  
+ They can only be used as last resort exceptions (e.g. third party library types mismatch etc.) with strong rational why being introduced into codebase.
+
+```ts
+// ❌ Avoid type & non-nullability assertions
+type User = { id: string; username: string; avatar: string | null };
+const user = { name: 'Nika' } as User;
+renderUserAvatar(user!.avatar);
+```
+
+### Type any
+
+`any` data type must not be used as it represents literally “any” value that TypeScript defaults to and skips type checking since it cannot infer the type. As such, any is dangerous, it can mask severe programming errors.  
+ If error truly cannot be resolved as safer option use type `unknown` since it does not allow dereferencing all properties or as last resort use `@ts-expect-error` ([Type Error](#type-error)).
+
+### Type Inference
+
+<p>
+  As rule of thumb, explicitly declare a type when it help narrows it.
+  <Chip>
+    Just because you don't need to add types, doesn't mean you shouldn't. In some cases explicit type declaration can
+    increase code readability and intent.
+  </Chip>
+</p>
+
+```ts
+// ❌ Avoid
+// Type can be inferred
+const userRole: string = 'admin'; // Type 'string'
+const employees = new Map<string, number>([['gabriel', 32]]);
+const [isActive, setIsActive] = useState<boolean>(false);
+
+// Type can be narrowed
+const employees = new Map(); // Type 'Map<any, any>'
+type UserRole = 'admin' | 'guest';
+const [userRole, setUserRole] = useState('admin'); // Type 'string'
+
+// ✅ Use
+const USER_ROLE = 'admin'; // Type 'admin'
+const employees = new Map([['gabriel', 32]]); // Type 'Map<string, number>'
+const [isActive, setIsActive] = useState(false); // Type 'boolean'
+
+const employees = new Map<string, number>(); // Type 'Map<string, number>'
+employees.set('gabriel', 32);
+type UserRole = 'admin' | 'guest';
+const [userRole, setUserRole] = useState<UserRole>('admin'); // Type 'UserRole'
+
+```
+
+### Return Types
+
+Including return type annotations is highly encouraged, altought not required ([eslint rule](https://typescript-eslint.io/rules/explicit-function-return-type/)).
+
+Consider benefits when explicitly typing the return value of a function:
+
+- Return values makes it clear and easy to understand to any calling code what type is returned.
+- In the case where there is no return value, the calling code doesn't try to use the undefined value when it shouldn't.
+- Surface potential type errors faster in the future if there are code changes that change the return type of the function.
+- Easier to refactor, since it ensures that the return value is assigned to a variable of the correct type.
+- Similar to writing tests before implementation (TDD), defining function arguments and return type, gives you the opportunity to discuss the feature functionality and its interface ahead of implementation.
+- Although type inference is very convenient, adding return types can save TypeScript compiler a lot of work.
+
+### Type Error
+
+If TypeScript error can't be mitigated, as last resort use `@ts-expect-error` to suppress it ([eslint rule](https://typescript-eslint.io/rules/prefer-ts-expect-error/)). If at any future point suppressed line becomes error-free, TypeScript compiler will indicate it.  
+`@ts-ignore` is not allowed, while `@ts-expect-error` can be used with provided description ([eslint rule](https://typescript-eslint.io/rules/ban-ts-comment/#allow-with-description)).
+
+```ts
+// ❌ Avoid @ts-ignore
+// @ts-ignore
+const result = doSomething('hello');
+
+// ✅ Use @ts-expect-error with description
+// @ts-expect-error: the library definition is wrong
+const result = doSomething('hello');
+```
+
+### Array Types
+
+Array types must be defined with generic syntax ([eslint rule](https://typescript-eslint.io/rules/array-type/#generic)).
+
+```ts
+// ❌ Avoid
+const x: string[] = ['a', 'b'];
+const y: readonly string[] = ['a', 'b'];
+
+// ✅ Use
+const x: Array<string> = ['a', 'b'];
+const y: ReadonlyArray<string> = ['a', 'b'];
+```
 
 ## Functions
 
@@ -201,139 +334,6 @@ For consistency strive to:
 
 - Use `null` to explicitly state it has no value - assignment, return function type etc.
 - Use `undefined` assignment when trying to exclude fields. E.g. in form fields, request payload, querying database ([Prisma differentiation](https://www.prisma.io/docs/concepts/components/prisma-client/null-and-undefined))...
-
-## Types
-
-### Type Definition
-
-TypeScript offers two options for type definitions - `type` and `interface`. As they come with some functional differences, we try to limit syntax difference and pick one for consistency.
-
-<p>
-  All types must be defined with `type` alias{' '}
-  <a href="https://typescript-eslint.io/rules/consistent-type-definitions/#type" target="_blank">
-    (eslint rule)
-  </a>
-  .<Chip>Consider using interfaces if developing package that can be further extended, team is more comfortable working with interfaces etc. Disable lint rule in case of exceptions as type unions (type Status = 'loading' | 'error') etc.</Chip>
-</p>
-
-```ts
-// ❌ Avoid interface definitions
-interface UserInfo {
-  name: string;
-}
-
-// ✅ Use type definition
-type UserInfo = {
-name: string;
-};
-
-```
-
-In case of exceptions use `interface` and disable lint rule. E.g. declaration merging, extending third-party library types etc.
-
-```ts
-declare namespace NodeJS {
-// eslint-disable-next-line @typescript-eslint/consistent-type-definitions
-export interface ProcessEnv {
-    NODE_ENV: 'development' | 'production;
-    PORT: string;
-  }
-}
-
-```
-
-### Type & Non-nullability Assertions
-
-Type assertions `user as User` and non-nullability assertions `user!.name` are unsafe. Both only silence TypeScript compiler and increase the risk of crashing application at runtime.  
- They can only be used as last resort exceptions (e.g. third party library types mismatch etc.) with strong rational why being introduced into codebase.
-
-```ts
-// ❌ Avoid type & non-nullability assertions
-type User = { id: string; username: string; avatar: string | null };
-const user = { name: 'Nika' } as User;
-renderUserAvatar(user!.avatar);
-```
-
-### Type any
-
-`any` data type must not be used as it represents literally “any” value that TypeScript defaults to and skips type checking since it cannot infer the type. As such, any is dangerous, it can mask severe programming errors.  
- If error truly cannot be resolved as safer option use type `unknown` since it does not allow dereferencing all properties or as last resort use `@ts-expect-error` ([Type Error](#type-error)).
-
-### Type Inference
-
-<p>
-  As rule of thumb, explicitly declare a type when it help narrows it.
-  <Chip>
-    Just because you don't need to add types, doesn't mean you shouldn't. In some cases explicit type declaration can
-    increase code readability and intent.
-  </Chip>
-</p>
-
-```ts
-// ❌ Avoid
-// Type can be inferred
-const userRole: string = 'admin'; // Type 'string'
-const employees = new Map<string, number>([['gabriel', 32]]);
-const [isActive, setIsActive] = useState<boolean>(false);
-
-// Type can be narrowed
-const employees = new Map(); // Type 'Map<any, any>'
-type UserRole = 'admin' | 'guest';
-const [userRole, setUserRole] = useState('admin'); // Type 'string'
-
-// ✅ Use
-const USER_ROLE = 'admin'; // Type 'admin'
-const employees = new Map([['gabriel', 32]]); // Type 'Map<string, number>'
-const [isActive, setIsActive] = useState(false); // Type 'boolean'
-
-const employees = new Map<string, number>(); // Type 'Map<string, number>'
-employees.set('gabriel', 32);
-type UserRole = 'admin' | 'guest';
-const [userRole, setUserRole] = useState<UserRole>('admin'); // Type 'UserRole'
-
-```
-
-### Return Types
-
-Including return type annotations is highly encouraged, altought not required ([eslint rule](https://typescript-eslint.io/rules/explicit-function-return-type/)).
-
-Consider benefits when explicitly typing the return value of a function:
-
-- Return values makes it clear and easy to understand to any calling code what type is returned.
-- In the case where there is no return value, the calling code doesn't try to use the undefined value when it shouldn't.
-- Surface potential type errors faster in the future if there are code changes that change the return type of the function.
-- Easier to refactor, since it ensures that the return value is assigned to a variable of the correct type.
-- Similar to writing tests before implementation (TDD), defining function arguments and return type, gives you the opportunity to discuss the feature functionality and its interface ahead of implementation.
-- Although type inference is very convenient, adding return types can save TypeScript compiler a lot of work.
-
-### Type Error
-
-If TypeScript error can't be mitigated, as last resort use `@ts-expect-error` to suppress it ([eslint rule](https://typescript-eslint.io/rules/prefer-ts-expect-error/)). If at any future point suppressed line becomes error-free, TypeScript compiler will indicate it.  
-`@ts-ignore` is not allowed, while `@ts-expect-error` can be used with provided description ([eslint rule](https://typescript-eslint.io/rules/ban-ts-comment/#allow-with-description)).
-
-```ts
-// ❌ Avoid @ts-ignore
-// @ts-ignore
-const result = doSomething('hello');
-
-// ✅ Use @ts-expect-error with description
-// @ts-expect-error: the library definition is wrong
-const result = doSomething('hello');
-```
-
-### Array Types
-
-Array types must be defined with generic syntax ([eslint rule](https://typescript-eslint.io/rules/array-type/#generic)).
-
-```ts
-// ❌ Avoid
-const x: string[] = ['a', 'b'];
-const y: readonly string[] = ['a', 'b'];
-
-// ✅ Use
-const x: Array<string> = ['a', 'b'];
-const y: ReadonlyArray<string> = ['a', 'b'];
-```
 
 ## Naming
 
