--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -67,7 +67,7 @@ TypeScript offers two options for type definitions - `type` and `interface`. As 
   <a href="https://typescript-eslint.io/rules/consistent-type-definitions/#type" target="_blank">
     (eslint rule)
   </a>
-  .<Chip>Consider using interfaces if developing package that can be further extended, team is more comfortable working with interfaces etc. Disable lint rule in case of exceptions as type unions (type Status = 'loading' | 'error') etc.</Chip>
+  .<Chip>Consider using interfaces if developing package that can be further extended, team is more comfortable working with interfaces etc. In such case disable lint rule where needed e.g. using type unions (type Status = 'loading' | 'error') etc.</Chip>
 </p>
 
 ```ts
