--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -86,6 +86,7 @@ name: string;
 In case of declaration merging (e.g. extending third-party library types) use `interface` and disable lint rule.
 
 ```ts
+// types.ts
 declare namespace NodeJS {
   // eslint-disable-next-line @typescript-eslint/consistent-type-definitions
   export interface ProcessEnv {
@@ -95,7 +96,8 @@ declare namespace NodeJS {
   }
 }
 
-app.listen(process.env.PORT, () => {
+// server.ts
+app.listen(process.env.PORT, () => {...}
 ```
 
 ### Type & Non-nullability Assertions
