--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -77,8 +77,11 @@ interface UserInfo {
 }
 
 // ✅ Use type definition
+type UserRole = 'admin' | 'guest';
+
 type UserInfo = {
-name: string;
+  name: string;
+  role: UserRole;
 };
 
 ```
