--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -189,6 +189,11 @@ const result = doSomething('hello');
 
 Array types must be defined with generic syntax ([eslint rule](https://typescript-eslint.io/rules/array-type/#generic)).
 
+<Chip>
+  As there is no functional difference between 'generic' and 'array' definition, feel free to set the one your team
+  finds most readable to work with.
+</Chip>
+
 ```ts
 // ❌ Avoid
 const x: string[] = ['a', 'b'];
