--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -545,7 +545,7 @@ const frequencies = signal.FFT();
 
 ### Code Collocation
 
-- Every application or package in monorepo has project files/folders organized and grouped by **feature**.
+- Every application or package in monorepo has project files/folders organized and grouped **by feature**.
 - **Collocate code as close as possible to where it's relevant.**
 - Deep folder nesting should not represent an issue.
 
