--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -350,9 +350,7 @@ For consistency strive to:
 
 ## Naming
 
-Setting aside convention on cache invalidation, but for the second hardest thing, clear naming with important context should be provided.
-
-Strive to keep naming conventions consistent and readable, because another person will maintain the code you have written.
+Strive to keep naming conventions consistent and readable, with important context provided, because another person will maintain the code you have written.
 
 ### Named Export
 
