--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -240,7 +240,7 @@ transformUserInput({
 
 ### Required & Optional Args
 
-Strive to have majority of args required and use optional sparingly.  
+**Strive to have majority of args required and use optional sparingly.**  
  If function becomes to complex it probably should be broken into smaller pieces.  
  An exaggerated example where implementing 10 functions with 5 required args each, is better then implementing one "can do it all" function that accepts 50 optional args.
 
