--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -25,7 +25,8 @@ As projects grow in size and complexity, maintaining code quality and ensuring c
 
 As any code style guide is opinionated, this is no different as it tries to set conventions (sometimes arbitrary) that govern our code.
 
-Since "consistency is the key", style guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc. Still certain design and architectural decisions must be followed which are described with conventions bellow.
+Since "consistency is the key", style guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc.  
+Still certain design and architectural decisions must be followed which are described with conventions bellow.
 
 Style Guide requires you to use:
 
