--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -208,7 +208,7 @@ const y: ReadonlyArray<string> = ['foo', 'bar'];
 
 ## Functions
 
-Function conventions should be followed as much as possible (some of them derives from functional programming basic concepts):
+Function conventions should be followed as much as possible (some of the conventions derives from functional programming basic concepts):
 
 ### General
 
