--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -17,6 +17,8 @@ TypeScript Style Guide provides a concise set of conventions and best practices 
 
 As projects grow in size and complexity, maintaining code quality and ensuring consistent practices becomes increasingly challenging. Defining and following a standard way to write TypeScript applications brings consistent codebase and faster development cycles.
 
+You don't have to follow every convention exactly as it is written in guide, decide what works best for your product and team and stay consistent with your codebase.
+
 ## Table of Contents
 
 <TableOfContents items={toc} />
