--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -520,7 +520,7 @@ const { fontSizes } = useTheme();
 
 In general try to avoid comments, by writing expressive code and name things what they are.
 
-Use comments as an exception when you need to add context or explain choices that cannot be expressed through code (e.g. config files).  
+Use comments when you need to add context or explain choices that cannot be expressed through code (e.g. config files).  
 Comments should always be complete sentences. As rule of thumb try to explain `why` in comments, not `how` and `what`.
 
 ```ts
