--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -17,8 +17,6 @@ TypeScript Style Guide provides a concise set of conventions and best practices 
 
 As projects grow in size and complexity, maintaining code quality and ensuring consistent practices becomes increasingly challenging. Defining and following a standard way to write TypeScript applications brings consistent codebase and faster development cycles.
 
-You don't have to follow every convention exactly as it is written in guide, decide what works best for your product and team and stay consistent with your codebase.
-
 ## Table of Contents
 
 <TableOfContents items={toc} />
@@ -30,6 +28,10 @@ As any code style guide is opinionated, this is no different as it tries to set 
 Since "consistency is the key", style guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc.  
 Still certain design and architectural decisions must be followed which are described with conventions bellow.
 
+**Note**  
+You don't have to follow every convention exactly as it is written in guide, decide what works best for your product and team and stay consistent with your codebase.
+
+**Requirements**  
 Style Guide requires you to use:
 
 - [TypeScript v5](https://github.com/microsoft/TypeScript)
