--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -28,7 +28,7 @@ As any code style guide is opinionated, this is no different as it tries to set 
 Since "consistency is the key", style guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc.  
 Still certain design and architectural decisions must be followed which are described with conventions bellow.
 
-**Note**  
+**Disclaimer**  
 You don't have to follow every convention exactly as it is written in guide, decide what works best for your product and team and stay consistent with your codebase.
 
 **Requirements**  
