--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -655,7 +655,7 @@ Especially when creating new component for first/single use case majority of pro
 There are potential exceptions, where component API needs to implement optional props from the start (e.g. shared components covering multiple use cases, UI design system components - button `isDisabled` etc.)
 
 If component/hook becomes to complex it probably should be broken into smaller pieces.  
-An exaggerated example where implementing 10 React components with 5 required props each, is better then implementing one "can do it all" function that accepts 50 optional props.
+An exaggerated example where implementing 10 React components with 5 required props each, is better then implementing one "can do it all" component that accepts 50 optional props.
 
 **Use Discriminated Type**
 
