--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -498,7 +498,7 @@ Camel case, prefixed as 'use' ([eslint rule](https://github.com/facebook/react/t
 // ❌ Avoid inconsistent useState hook naming
 const [userName, setUser] = useState();
 const [color, updateColor] = useState();
-const [visible, setVisible] = useState();
+const [isActive, setActive] = useState();
 
 // ✅ Use
 const [name, setName] = useState();
