--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -110,10 +110,21 @@ Consider benefits when explicitly typing the return value of a function:
 - Similar to writing tests before implementation (TDD), defining function arguments and return type, gives you the opportunity to discuss the feature functionality and its interface ahead of implementation.
 - Although type inference is very convenient, adding return types can save TypeScript compiler a lot of work.
 
-### Type any
+### Type any & unknown
 
-`any` data type must not be used as it represents literally “any” value that TypeScript defaults to and skips type checking since it cannot infer the type. As such, any is dangerous, it can mask severe programming errors.  
- If error truly cannot be resolved as safer option use type `unknown` since it does not allow dereferencing all properties or as last resort use `@ts-expect-error` ([Type Error](#type-error)).
+`any` data type must not be used as it represents literally “any” value that TypeScript defaults to and skips type checking since it cannot infer the type. As such, `any` is dangerous, it can mask severe programming errors.
+
+When dealing with ambiguous data type use `unknown` since it does not allow dereferencing all properties.
+
+```ts
+// ❌ Avoid any
+const foo: any = 'five';
+let bar: number = bar; // no type error
+
+// ✅ Use unknown
+const foo: unknown = 5;
+let bar: number = foo; // type error - Type 'unknown' is not assignable to type 'number'
+```
 
 ### Type & Non-nullability Assertions
 
