--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -121,7 +121,7 @@ When dealing with ambiguous data type use `unknown` since it does not allow dere
 const foo: any = 'five';
 let bar: number = bar; // no type error
 
-// ✅ Use unknown
+// ✅ Use unknown and narrow the type before dereferencing it
 const foo: unknown = 5;
 let bar: number = foo; // type error - Type 'unknown' is not assignable to type 'number'
 ```
@@ -129,7 +129,7 @@ let bar: number = foo; // type error - Type 'unknown' is not assignable to type 
 ### Type & Non-nullability Assertions
 
 Type assertions `user as User` and non-nullability assertions `user!.name` are unsafe. Both only silence TypeScript compiler and increase the risk of crashing application at runtime.  
- They can only be used as last resort exceptions (e.g. third party library types mismatch etc.) with strong rational why being introduced into codebase.
+ They can only be used as an exceptions (e.g. third party library types mismatch, dereferencing `unknown` etc.) with strong rational why being introduced into codebase.
 
 ```ts
 // ❌ Avoid type & non-nullability assertions
