--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -169,7 +169,7 @@ const result = doSomething('hello');
 
 ### Type Definition
 
-TypeScript offers two options for type definitions - `type` and `interface`. As they come with some functional differences, we try to limit syntax difference and pick one for consistency.
+TypeScript offers two options for type definitions - `type` and `interface`. As they come with some functional differences in most cases they can be used interchangeably. We try to limit syntax difference and pick one for consistency.
 
 All types must be defined with `type` alias [(eslint rule)](https://typescript-eslint.io/rules/consistent-type-definitions/#type).
 
