--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -896,7 +896,7 @@ it('should return parsed date as YYYY-MM when input is in ISO date format');
 it('should render user description when title is confirmed');
 ```
 
-### Tooling Extension
+### Test Tooling
 
 Test can be run through npm scripts, but to improve development experience it's highly encouraged to use [Jest Runner](https://marketplace.visualstudio.com/items?itemName=firsttris.vscode-jest-runner) VS code extension so any single test can be run [instantly](https://github.com/mkosir/typescript-style-guide/raw/main/misc/vscode-jest-runner.gif), especially if testing app/package in larger codebase (monorepo).
 
